NapID/auth/auth-cron-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
  labels:
    io.napid.service: auth-cron
  name: auth-cron
  namespace: napid-auth
spec:
  replicas: 1
  selector:
    matchLabels:
      io.napid.service: auth-cron
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.napid.service: auth-cron
    spec:
      containers:
      - image: napidrepo.azurecr.io/auth-cron:latest
        imagePullPolicy: Always
        name: auth-cron
        resources: {}
      imagePullSecrets:
      - name: napidrepo-secret
      restartPolicy: Always
      securityContext: {}
