NapID/auth/auth-service-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
  generation: 1
  labels:
    io.napid.service: auth-service
  name: auth-service
  namespace: napid-auth
spec:
  replicas: 1
  selector:
    matchLabels:
      io.napid.service: auth-service
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        io.napid.service: auth-service
    spec:
      containers:
      - image: napidrepo.azurecr.io/auth-service:latest
        imagePullPolicy: Always
        name: auth-service
        ports:
        - containerPort: 8090
          protocol: TCP
        resources: {}
      imagePullSecrets:
      - name: napidrepo-secret
      restartPolicy: Always
      securityContext: {}
