NapID/auth/auth-service-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.napid.service: auth-service
  name: auth-service
  namespace: napid-auth
spec:
  ports:
  - name: "8090"
    port: 8090
    protocol: TCP
    targetPort: 8090
  selector:
    io.napid.service: auth-service
  type: ClusterIP
