NapID/auth/token-service-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: kong
  name: token-service-ingress
  namespace: napid-auth
spec:
  rules:
  - http:
      paths:
      - backend:
          service:
            name: auth-service
            port:
              number: 8090
        path: /api
        pathType: Prefix
